--- a/LaTeX converter.ipynb
+++ b/LaTeX converter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 127,
    "id": "fae3a8b5-db6c-460b-bac4-977e45f6752e",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,7 @@
     "    Changes from previous versions:\n",
     "    - Ensures that \\label{...} commands for tables are included on the same line as the caption, just like for figures.\n",
     "    - If table conversion fails, the original LaTeX code is presented in a code block without captions and labels, even if the captions contain nested braces.\n",
+    "    - Adds robust removal of LaTeX commands like \\ignore{...}, handling nested braces.\n",
     "    \"\"\"\n",
     "\n",
     "    if not input_path.endswith('.tex'):\n",
@@ -358,20 +359,61 @@
     "\n",
     "    content = replace_inline_formats_func(content)\n",
     "\n",
+    "    def remove_latex_command(text, command):\n",
+    "        \"\"\"\n",
+    "        Removes all instances of a LaTeX command with its argument, handling nested braces.\n",
+    "        \n",
+    "        Parameters:\n",
+    "            text (str): The input text.\n",
+    "            command (str): The LaTeX command to remove (e.g., 'ignore').\n",
+    "        \n",
+    "        Returns:\n",
+    "            str: The text with the specified command removed.\n",
+    "        \"\"\"\n",
+    "        pattern = re.compile(r'\\\\' + re.escape(command) + r'\\{')\n",
+    "        result = []\n",
+    "        pos = 0\n",
+    "        while True:\n",
+    "            cmatch = pattern.search(text, pos)\n",
+    "            if not cmatch:\n",
+    "                result.append(text[pos:])\n",
+    "                break\n",
+    "            start = cmatch.start()\n",
+    "            result.append(text[pos:start])\n",
+    "            brace_level = 1\n",
+    "            i = cmatch.end()\n",
+    "            while i < len(text) and brace_level > 0:\n",
+    "                if text[i] == '{':\n",
+    "                    brace_level += 1\n",
+    "                elif text[i] == '}':\n",
+    "                    brace_level -= 1\n",
+    "                i += 1\n",
+    "            pos = i  # Move past the closing brace\n",
+    "        return ''.join(result)\n",
+    "\n",
     "    def remove_leftover_commands(text):\n",
-    "        commands_to_remove = ['vspace', 'hspace', 'bigskip', 'smallskip', 'medskip']\n",
+    "        r\"\"\"\n",
+    "        Remove all specified LaTeX commands from the text, handling nested braces.\n",
+    "        \"\"\"\n",
+    "        commands_to_remove = ['vspace', 'hspace', 'bigskip', 'smallskip', 'medskip', 'ignore', 'bibliographystyle']\n",
     "        commands_to_replace_newline = ['newpage', 'pagebreak', 'linebreak', 'clearpage', 'cleardoublepage']\n",
     "\n",
-    "        remove_pattern = re.compile(\n",
-    "            r'\\\\(?:' + '|'.join(commands_to_remove) + r')(?:\\[[^\\]]*\\])?(?:\\{[^}]*\\})?', flags=re.DOTALL\n",
-    "        )\n",
-    "        replace_newline_pattern = re.compile(\n",
-    "            r'\\\\(?:' + '|'.join(commands_to_replace_newline) + r')(?:\\[[^\\]]*\\])?(?:\\{[^}]*\\})?',\n",
-    "            flags=re.DOTALL\n",
-    "        )\n",
+    "        for cmd in commands_to_remove:\n",
+    "            text = remove_latex_command(text, cmd)\n",
     "\n",
+    "        # Remove commands without arguments\n",
+    "        remove_pattern = re.compile(\n",
+    "            r'\\\\(?:' + '|'.join(commands_to_remove) + r')\\s*'\n",
+    "        )\n",
     "        text = remove_pattern.sub('', text)\n",
+    "\n",
+    "        # Replace newline commands with two newlines\n",
+    "        replace_newline_pattern = re.compile(\n",
+    "            r'\\\\(?:' + '|'.join(commands_to_replace_newline) + r')\\s*'\n",
+    "        )\n",
     "        text = replace_newline_pattern.sub('\\n\\n', text)\n",
+    "\n",
+    "        # Clean up extra newlines\n",
     "        text = re.sub(r'\\n{3,}', '\\n\\n', text)\n",
     "        return text\n",
     "\n",
@@ -405,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 128,
    "id": "2ce5807f-71a7-4628-a956-501e0c1a2de6",
    "metadata": {},
    "outputs": [
@@ -413,7 +455,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Table conversion failed. Retaining original LaTeX table without captions and labels.\n",
       "Cleaned file has been written to: ./maintext.txt\n"
      ]
     }
