feat: functioning latex extractor and arxiv file loading

--- a/LaTeX converter.ipynb
+++ b/LaTeX converter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 50,
    "id": "fae3a8b5-db6c-460b-bac4-977e45f6752e",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import os\n",
     "import re\n",
     "\n",
-    "def clean_latex_file(input_path):\n",
+    "def clean_latex_file(input_str):\n",
     "    r\"\"\"\n",
     "    Cleans a LaTeX file by removing comments, extracting content within \\begin{document} and \\end{document},\n",
     "    and converting sections, figures, itemize/enumerate, equations, tables, etc. into a Markdown-friendly format.\n",
@@ -20,22 +20,30 @@
     "    - If table conversion fails, the original LaTeX code is presented in a code block without captions and labels, even if the captions contain nested braces.\n",
     "    - Adds robust removal of LaTeX commands like \\ignore{...}, handling nested braces.\n",
     "    \"\"\"\n",
+    "    content = None\n",
+    "    \n",
+    "    if isinstance(input_str, str) and '\\n' in input_str:\n",
+    "        content = input_str\n",
     "\n",
-    "    if not input_path.endswith('.tex'):\n",
-    "        raise ValueError(\"Input file must have a .tex extension.\")\n",
+    "    # Try to load\n",
+    "    if not content:\n",
+    "        if not input_str.endswith('.tex'):\n",
+    "            raise ValueError(\"Input file must have a .tex extension.\")\n",
     "\n",
-    "    base, _ = os.path.splitext(input_path)\n",
-    "    output_path = f\"{base}.txt\"\n",
-    "\n",
-    "    try:\n",
-    "        with open(input_path, 'r', encoding='utf-8') as infile:\n",
-    "            content = infile.read()\n",
-    "    except FileNotFoundError:\n",
-    "        print(f\"Error: The file {input_path} does not exist.\")\n",
-    "        return\n",
-    "    except Exception as e:\n",
-    "        print(f\"An error occurred: {e}\")\n",
-    "        return\n",
+    "        base, _ = os.path.splitext(input_str)\n",
+    "        output_path = f\"{base}.txt\"\n",
+    "    \n",
+    "        try:\n",
+    "            with open(input_str, 'r', encoding='utf-8') as infile:\n",
+    "                content = infile.read()\n",
+    "        except FileNotFoundError:\n",
+    "            print(f\"Error: The file {input_str} does not exist.\")\n",
+    "            return\n",
+    "        except Exception as e:\n",
+    "            print(f\"An error occurred: {e}\")\n",
+    "            return\n",
+    "    else:\n",
+    "        output_path = \"output.txt\"\n",
     "\n",
     "    def preprocess_abstract(text):\n",
     "        text = re.sub(r'\\\\begin\\{abstract\\}', r'\\\\section*{Abstract}', text)\n",
@@ -127,6 +135,7 @@
     "        return figure_env.sub(figure_repl, text)\n",
     "\n",
     "    content = replace_figures(content)\n",
+    "\n",
     "\n",
     "    def convert_tabular_to_markdown(inner):\n",
     "        try:\n",
@@ -447,27 +456,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "2ce5807f-71a7-4628-a956-501e0c1a2de6",
+   "execution_count": 51,
+   "id": "bc591044-5ae6-445d-ac32-205785145e05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import tarfile\n",
+    "import os\n",
+    "import re\n",
+    "from pathlib import Path\n",
+    "import tempfile\n",
+    "\n",
+    "def get_arxiv_tex(identifier):\n",
+    "    \"\"\"\n",
+    "    Download and extract arXiv source files, returning the main tex content.\n",
+    "    \n",
+    "    Args:\n",
+    "        identifier (str): Either full arXiv URL or just the paper number (e.g. '2412.06264')\n",
+    "        \n",
+    "    Returns:\n",
+    "        str: Content of the main tex file\n",
+    "        \n",
+    "    Raises:\n",
+    "        ValueError: If the identifier is invalid or source files cannot be accessed\n",
+    "        RuntimeError: If no main tex file is found\n",
+    "    \"\"\"\n",
+    "    # Extract paper number from URL if needed\n",
+    "    if identifier.startswith('http'):\n",
+    "        match = re.search(r'arxiv.org/(?:abs|pdf)/(\\d+\\.\\d+)', identifier)\n",
+    "        if not match:\n",
+    "            raise ValueError(\"Invalid arXiv URL format\")\n",
+    "        paper_number = match.group(1)\n",
+    "    else:\n",
+    "        # Verify the paper number format\n",
+    "        if not re.match(r'^\\d+\\.\\d+$', identifier):\n",
+    "            raise ValueError(\"Invalid arXiv identifier format\")\n",
+    "        paper_number = identifier\n",
+    "    \n",
+    "    # Create source URL\n",
+    "    source_url = f'https://arxiv.org/src/{paper_number}'\n",
+    "    \n",
+    "    # Download the source files\n",
+    "    response = requests.get(source_url)\n",
+    "    if response.status_code != 200:\n",
+    "        raise ValueError(f\"Failed to download source files (Status code: {response.status_code})\")\n",
+    "    \n",
+    "    # Create a temporary directory for extraction\n",
+    "    with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "        # Save the downloaded tar file\n",
+    "        tar_path = Path(temp_dir) / 'source.tar.gz'\n",
+    "        with open(tar_path, 'wb') as f:\n",
+    "            f.write(response.content)\n",
+    "        \n",
+    "        # Extract the tar file using the new filter parameter\n",
+    "        with tarfile.open(tar_path, 'r:gz') as tar:\n",
+    "            tar.extractall(path=temp_dir, filter='data')\n",
+    "        \n",
+    "        # Look for main tex file\n",
+    "        tex_files = list(Path(temp_dir).rglob('*.tex'))\n",
+    "        if not tex_files:\n",
+    "            raise RuntimeError(\"No tex files found in the source\")\n",
+    "        \n",
+    "        # Common main file names (all lowercase for comparison)\n",
+    "        main_candidates = [\n",
+    "            'main.tex',\n",
+    "            'paper.tex',\n",
+    "            'article.tex',\n",
+    "            'manuscript.tex',\n",
+    "            'submission.tex',\n",
+    "            'arxiv.tex',\n",
+    "            'document.tex',\n",
+    "            'draft.tex',\n",
+    "            'preprint.tex',\n",
+    "            'source.tex',\n",
+    "            'neurips.tex',\n",
+    "            'icml.tex',\n",
+    "            'iclr.tex',\n",
+    "            'aaai.tex',\n",
+    "            'ijcai.tex',\n",
+    "            f'{paper_number}.tex'\n",
+    "        ]\n",
+    "        \n",
+    "        main_file = None\n",
+    "        \n",
+    "        # First try common file names (case-insensitive)\n",
+    "        for candidate in main_candidates:\n",
+    "            for tex_file in tex_files:\n",
+    "                if tex_file.name.lower() == candidate:\n",
+    "                    main_file = tex_file\n",
+    "                    break\n",
+    "            if main_file:\n",
+    "                break\n",
+    "                \n",
+    "        # If no common names found, try the directory name (case-insensitive)\n",
+    "        if not main_file:\n",
+    "            for tex_file in tex_files:\n",
+    "                if tex_file.parent.name.lower() + '.tex' == tex_file.name.lower():\n",
+    "                    main_file = tex_file\n",
+    "                    break\n",
+    "        \n",
+    "        # If still no match, look for file with \\documentclass\n",
+    "        if not main_file:\n",
+    "            for tex_file in tex_files:\n",
+    "                with open(tex_file, 'r', encoding='utf-8') as f:\n",
+    "                    content = f.read()\n",
+    "                    if r'\\documentclass' in content:\n",
+    "                        main_file = tex_file\n",
+    "                        break\n",
+    "        \n",
+    "        # If still no main file found, use the first tex file\n",
+    "        if not main_file and tex_files:\n",
+    "            main_file = tex_files[0]\n",
+    "        \n",
+    "        if not main_file:\n",
+    "            raise RuntimeError(\"Could not identify main tex file\")\n",
+    "        \n",
+    "        # Read and return the content\n",
+    "        with open(main_file, 'r', encoding='utf-8') as f:\n",
+    "            return f.read()\n",
+    "            \n",
+    "# Example usage:\n",
+    "# tex_content = get_arxiv_tex('2412.06264')\n",
+    "# tex_content = get_arxiv_tex('https://arxiv.org/abs/2412.06264')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "b097ced7-e82e-4d2b-94c5-f4d8b1452599",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cleaned file has been written to: ./maintext.txt\n"
+      "Cleaned file has been written to: output.txt\n"
      ]
     }
    ],
    "source": [
-    "input_file = './maintext.tex'  # Replace with your .tex file path\n",
-    "clean_latex_file(input_file)"
+    "#input_file = './maintext.tex'  # Replace with your .tex file path\n",
+    "tex_content = get_arxiv_tex('2412.06264')\n",
+    "clean_latex_file(tex_content)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b097ced7-e82e-4d2b-94c5-f4d8b1452599",
+   "id": "c555f313-d95e-431c-ad28-4dd8da0e6d5d",
    "metadata": {},
    "outputs": [],
    "source": []
