fix: add title and authors if present

--- a/LaTeX converter.ipynb
+++ b/LaTeX converter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 80,
    "id": "fae3a8b5-db6c-460b-bac4-977e45f6752e",
    "metadata": {},
    "outputs": [],
@@ -13,15 +13,8 @@
     "def clean_latex_file(input_str):\n",
     "    r\"\"\"\n",
     "    Cleans a LaTeX file by removing comments, extracting content within \\begin{document} and \\end{document},\n",
-    "    and converting sections, figures, itemize/enumerate, equations, tables, etc. into a Markdown-friendly format.\n",
-    "    \n",
-    "    Changes from previous versions:\n",
-    "    - Ensures that \\label{...} commands for tables are included on the same line as the caption, just like for figures.\n",
-    "    - If table conversion fails, the original LaTeX code is presented in a code block without captions and labels, even if the captions contain nested braces.\n",
-    "    - Adds robust removal of LaTeX commands like \\ignore{...}, handling nested braces.\n",
-    "    - **Handles multiple tabular environments within a single table:**\n",
-    "        - If multiple tabulars are **not nested**, converts each to separate Markdown tables.\n",
-    "        - If tabulars are **nested**, retains the captions and labels in Markdown and includes the tabular content as LaTeX code within a code block.\n",
+    "    handling \\maketitle by replacing it with the title and authors in Markdown format,\n",
+    "    and converting sections, figures, itemize/enumerate, equations, tables, etc. into a Markdown-friendly format.    \n",
     "    \"\"\"\n",
     "    content = None\n",
     "    \n",
@@ -55,21 +48,77 @@
     "\n",
     "    content = preprocess_abstract(content)\n",
     "\n",
+    "    # Extract \\title and \\author from the entire content before extracting the document\n",
+    "    def extract_title_authors(text):\n",
+    "        title = \"\"\n",
+    "        authors = \"\"\n",
+    "        \n",
+    "        # Pattern to match \\title{...} with nested braces\n",
+    "        title_pattern = re.compile(r'\\\\title\\{')\n",
+    "        title_match = title_pattern.search(text)\n",
+    "        if title_match:\n",
+    "            start = title_match.end()\n",
+    "            brace_level = 1\n",
+    "            i = start\n",
+    "            while i < len(text) and brace_level > 0:\n",
+    "                if text[i] == '{':\n",
+    "                    brace_level += 1\n",
+    "                elif text[i] == '}':\n",
+    "                    brace_level -= 1\n",
+    "                i += 1\n",
+    "            if brace_level == 0:\n",
+    "                title = text[start:i-1].strip()\n",
+    "                # Remove the \\title{...} from text\n",
+    "                text = text[:title_match.start()] + text[i:]\n",
+    "            else:\n",
+    "                print(\"Warning: Unbalanced braces in \\\\title command.\")\n",
+    "                title = text[start:].strip()\n",
+    "                text = text[:title_match.start()]\n",
+    "        \n",
+    "        # Pattern to match \\author{...} with nested braces\n",
+    "        author_pattern = re.compile(r'\\\\author\\{')\n",
+    "        author_match = author_pattern.search(text)\n",
+    "        if author_match:\n",
+    "            start = author_match.end()\n",
+    "            brace_level = 1\n",
+    "            i = start\n",
+    "            while i < len(text) and brace_level > 0:\n",
+    "                if text[i] == '{':\n",
+    "                    brace_level += 1\n",
+    "                elif text[i] == '}':\n",
+    "                    brace_level -= 1\n",
+    "                i += 1\n",
+    "            if brace_level == 0:\n",
+    "                authors = text[start:i-1].strip()\n",
+    "                # Remove the \\author{...} from text\n",
+    "                text = text[:author_match.start()] + text[i:]\n",
+    "            else:\n",
+    "                print(\"Warning: Unbalanced braces in \\\\author command.\")\n",
+    "                authors = text[start:].strip()\n",
+    "                text = text[:author_match.start()]\n",
+    "        \n",
+    "        return text, title, authors\n",
+    "\n",
+    "    content, title, authors = extract_title_authors(content)\n",
+    "\n",
     "    # Extract content between \\begin{document} and \\end{document}, if present\n",
     "    doc_match = re.search(r'\\\\begin\\{document\\}(.*?)\\\\end\\{document\\}', content, flags=re.DOTALL)\n",
     "    if doc_match:\n",
-    "        content = doc_match.group(1)\n",
+    "        document_content = doc_match.group(1)\n",
+    "    else:\n",
+    "        # If \\begin{document} is not found, assume entire content is the document\n",
+    "        document_content = content\n",
     "\n",
     "    # Remove comments (unescaped %)\n",
-    "    content = re.sub(r'(?<!\\\\)%.*', '', content)\n",
+    "    document_content = re.sub(r'(?<!\\\\)%.*', '', document_content)\n",
     "\n",
     "    # Normalize whitespace\n",
-    "    content = re.sub(r'\\r\\n', '\\n', content)\n",
-    "    content = re.sub(r'\\n{3,}', '\\n\\n', content)\n",
-    "    content = content.replace('\\n\\n', '<<<PARA_BREAK>>>')\n",
-    "    content = re.sub(r'\\n', ' ', content)\n",
-    "    content = re.sub(r'\\s+', ' ', content).strip()\n",
-    "    content = content.replace('<<<PARA_BREAK>>>', '\\n\\n')\n",
+    "    document_content = re.sub(r'\\r\\n', '\\n', document_content)\n",
+    "    document_content = re.sub(r'\\n{3,}', '\\n\\n', document_content)\n",
+    "    document_content = document_content.replace('\\n\\n', '<<<PARA_BREAK>>>')\n",
+    "    document_content = re.sub(r'\\n', ' ', document_content)\n",
+    "    document_content = re.sub(r'\\s+', ' ', document_content).strip()\n",
+    "    document_content = document_content.replace('<<<PARA_BREAK>>>', '\\n\\n')\n",
     "\n",
     "    def apply_inline_formats(text):\n",
     "        # \\emph{...}, \\textit{...} -> *...*\n",
@@ -85,6 +134,30 @@
     "        text = textsc_pattern.sub(lambda m: \"`\" + m.group(1).strip() + \"`\", text)\n",
     "\n",
     "        return text\n",
+    "\n",
+    "    def replace_maketitle(text, title, authors):\n",
+    "        r\"\"\"\n",
+    "        Replaces \\maketitle with Markdown-formatted title and authors.\n",
+    "        \"\"\"\n",
+    "        # Prepare Markdown replacement\n",
+    "        replacement = \"\"\n",
+    "        if title:\n",
+    "            replacement += f\"# {apply_inline_formats(title)}\\n\\n\"\n",
+    "        if authors:\n",
+    "            # Split authors by \\and or commas\n",
+    "            authors_clean = re.split(r'\\\\and|,', authors)\n",
+    "            authors_clean = [a.strip() for a in authors_clean if a.strip()]\n",
+    "            authors_md = ', '.join(authors_clean)\n",
+    "            replacement += f\"**Authors:** {authors_md}\\n\\n\"\n",
+    "\n",
+    "        # Replace \\maketitle with the prepared Markdown using a lambda to avoid escape sequence issues\n",
+    "        maketitle_pattern = re.compile(r'\\\\maketitle')\n",
+    "        text = maketitle_pattern.sub(lambda m: replacement, text)\n",
+    "\n",
+    "        return text\n",
+    "\n",
+    "    # Replace \\maketitle in the document content\n",
+    "    document_content = replace_maketitle(document_content, title, authors)\n",
     "\n",
     "    def replace_figures(text):\n",
     "        figure_env = re.compile(r'\\\\begin\\{figure.*?\\}(.*?)\\\\end\\{figure.*?\\}', flags=re.DOTALL)\n",
@@ -141,8 +214,7 @@
     "\n",
     "        return figure_env.sub(figure_repl, text)\n",
     "\n",
-    "    content = replace_figures(content)\n",
-    "\n",
+    "    document_content = replace_figures(document_content)\n",
     "\n",
     "    def has_nested_tabulars(text):\n",
     "        \"\"\"\n",
@@ -359,7 +431,7 @@
     "\n",
     "        return table_env.sub(table_repl, text)\n",
     "\n",
-    "    content = replace_tables(content)\n",
+    "    document_content = replace_tables(document_content)\n",
     "\n",
     "    def replace_equations(text):\n",
     "        eq_env = re.compile(r'\\\\begin\\{equation\\}(.*?)\\\\end\\{equation\\}', flags=re.DOTALL)\n",
@@ -371,7 +443,7 @@
     "\n",
     "        return eq_env.sub(eq_repl, text)\n",
     "\n",
-    "    content = replace_equations(content)\n",
+    "    document_content = replace_equations(document_content)\n",
     "\n",
     "    def replace_headings(text):\n",
     "        sec_pattern = re.compile(\n",
@@ -400,7 +472,7 @@
     "\n",
     "        return sec_pattern.sub(sec_repl, text)\n",
     "\n",
-    "    content = replace_headings(content)\n",
+    "    document_content = replace_headings(document_content)\n",
     "\n",
     "    def replace_lists(text):\n",
     "        enum_env = re.compile(r'\\\\begin\\{enumerate\\}(\\[[^\\]]*\\])?(.*?)\\\\end\\{enumerate\\}', flags=re.DOTALL)\n",
@@ -434,12 +506,12 @@
     "\n",
     "        return text\n",
     "\n",
-    "    content = replace_lists(content)\n",
+    "    document_content = replace_lists(document_content)\n",
     "\n",
     "    def replace_inline_formats_func(text):\n",
     "        return apply_inline_formats(text)\n",
     "\n",
-    "    content = replace_inline_formats_func(content)\n",
+    "    document_content = replace_inline_formats_func(document_content)\n",
     "\n",
     "    def remove_latex_command(text, command):\n",
     "        \"\"\"\n",
@@ -499,7 +571,7 @@
     "        text = re.sub(r'\\n{3,}', '\\n\\n', text)\n",
     "        return text\n",
     "\n",
-    "    content = remove_leftover_commands(content)\n",
+    "    document_content = remove_leftover_commands(document_content)\n",
     "\n",
     "    def remove_formatting_cmds(text):\n",
     "        formatting_cmds = re.compile(\n",
@@ -508,20 +580,20 @@
     "        )\n",
     "        return formatting_cmds.sub(' ', text)\n",
     "\n",
-    "    content = remove_formatting_cmds(content)\n",
+    "    document_content = remove_formatting_cmds(document_content)\n",
     "\n",
-    "    content = re.sub(r'\\n\\n\\s+', '\\n\\n', content)\n",
+    "    document_content = re.sub(r'\\n\\n\\s+', '\\n\\n', document_content)\n",
     "\n",
     "    def final_cleanup(text):\n",
     "        text = re.sub(r' {2,}', ' ', text)\n",
     "        text = re.sub(r'\\n{3,}', '\\n\\n', text)\n",
     "        return text.strip() + \"\\n\"\n",
     "\n",
-    "    content = final_cleanup(content)\n",
+    "    document_content = final_cleanup(document_content)\n",
     "\n",
     "    try:\n",
     "        with open(output_path, 'w', encoding='utf-8') as outfile:\n",
-    "            outfile.write(content)\n",
+    "            outfile.write(document_content)\n",
     "        print(f\"Cleaned file has been written to: {output_path}\")\n",
     "    except Exception as e:\n",
     "        print(f\"An error occurred while writing the output file: {e}\")\n"
@@ -529,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 81,
    "id": "bc591044-5ae6-445d-ac32-205785145e05",
    "metadata": {},
    "outputs": [],
@@ -656,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 82,
    "id": "b097ced7-e82e-4d2b-94c5-f4d8b1452599",
    "metadata": {},
    "outputs": [
@@ -664,13 +736,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cleaned file has been written to: ./maintext.txt\n"
+      "Warning: Nested tabular environments detected within a table.\n",
+      "Warning: Nested tabular environments detected. Retaining tabular content as LaTeX code.\n",
+      "Cleaned file has been written to: output.txt\n"
      ]
     }
    ],
    "source": [
-    "input_file = './maintext.tex'  # Replace with your .tex file path\n",
-    "#input_file = get_arxiv_tex('2412.06264')\n",
+    "#input_file = './maintext.tex'  # Replace with your .tex file path\n",
+    "input_file = get_arxiv_tex('2412.06264')\n",
     "clean_latex_file(input_file)"
    ]
   },
