--- a/LaTeX converter.ipynb
+++ b/LaTeX converter.ipynb
@@ -5,18 +5,7 @@
    "execution_count": 1,
    "id": "bc591044-5ae6-445d-ac32-205785145e05",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:9: SyntaxWarning: invalid escape sequence '\\i'\n",
-      "<>:9: SyntaxWarning: invalid escape sequence '\\i'\n",
-      "C:\\Users\\luigi\\AppData\\Local\\Temp\\ipykernel_17704\\3305136990.py:9: SyntaxWarning: invalid escape sequence '\\i'\n",
-      "  \"\"\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import tarfile\n",
@@ -27,7 +16,7 @@
     "\n",
     "def process_tex_includes(content, base_path):\n",
     "    \"\"\"\n",
-    "    Process \\include and \\input commands in a tex file, returning the full content.\n",
+    "    Process include and input commands in a tex file, returning the full content.\n",
     "    \n",
     "    Args:\n",
     "        content (str): The content of the main tex file\n",
@@ -180,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b097ced7-e82e-4d2b-94c5-f4d8b1452599",
    "metadata": {},
    "outputs": [
@@ -188,6 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Warning: Table conversion failed or no tabulars found.\n",
       "Warning: Table conversion failed or no tabulars found.\n",
       "Warning: Nested tabular environments detected. Retaining tabular content as LaTeX code.\n",
       "Warning: Nested tabular environments detected. Retaining tabular content as LaTeX code.\n",
@@ -200,6 +190,7 @@
     "\n",
     "input_file = './maintext.tex'  # Replace with your .tex file path\n",
     "input_file = get_arxiv_tex('https://arxiv.org/abs/2410.15320')\n",
+    "#input_file = 'C:/Users/luigi/Dropbox/Professor/Presentations/2024/Computational Statistics (Oct 2024)/acerbi-compstats-oct2022.tex'\n",
     "clean_latex_file(input_file)"
    ]
   },
@@ -865,8 +856,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "808df8be-914c-435f-bca4-454dd8204ecb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.82842712474619"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "z = np.array((np.sqrt(3),np.sqrt(3),1.,1.))\n",
+    "np.sqrt(np.sum(z**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "74053540-0340-4984-9cef-c1b29c7399e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.8284271247461903"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(3 + 3 + 1 + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7495a9f8-158e-4ae0-8d49-d38900d3f88f",
    "metadata": {},
    "outputs": [],
    "source": []
